--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1605,16 +1605,16 @@
 /* /-----::POPULAR-PRODUCT::-----/ */
 .popular-product {
   display: grid;
-  grid-template-columns: 4fr 1.3fr;
+  grid-template-columns: calc(100% - 370px) 340px;
   margin-top: 40px;
   height: auto;
   grid-column-gap: 30px;
+  overflow: auto;
 }
 
 .popular-products-cards {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 30px;
+  width: 100%;
+  // grid-gap: 30px;
 }
 
 @media (max-width: 1456px) {
